--- a/style.css
+++ b/style.css
@@ -1,7 +1,165 @@
-#menu
-{
-	position: fixed;
-	width: 100%;
-	height: 35px;
-	background: white;
+/* The navigation bar */
+.navbar {
+	overflow: hidden;
+	background-color: #333;
+	position: fixed; /* Set the navbar to fixed position */
+	top: 0; /* Position the navbar at the top of the page */
+	width: 100%; /* Full width */
+	height: 66px;
+	display: inline-flex;
+}
+
+/* Links inside the navbar */
+.navbar a {
+	float: left;
+	display: block;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 12px 14px;
+	text-decoration: purple;
+}
+
+/* Change background on mouse-over */
+.navbar a:hover {
+	background: #ddd;
+	color: black;
+}
+
+/* Main content */
+.main {
+	margin-top: 40px; /* Add a top margin to avoid content overlay */
+}
+
+
+body {
+	background-color: pink;
+	background-image: url("background.jpg");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+}
+
+
+h1 {
+	background-color: black;
+	border-bottom-style: dotted;
+	font-family: "Calibri";
+	color: mistyrose;
+	font-optical-sizing: auto;
+	text-align: center;
+	font-size: 25px;
+
+}
+
+p {
+	font-family: Gisha;
+	font-size: 12px;
+	background: lavenderblush;
+	width: 1100px;
+	position: center;
+	alignment: center;
+	text-align:center;
+}
+
+Table {
+	alignment: center;
+	font-size: 12px;
+	font-family: Gisha;
+}
+
+h3 {
+	font-family: Gisha;
+	color: black;
+	font-style: normal;
+	font-optical-sizing: auto;
+	text-align: left;
+}
+
+/* Dropdown Button */
+.dropbtn {
+	background-color: lightpink;
+	color: #333333;
+	padding: 16px;
+	font-size: 14px;
+	border: none;
+	cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+	background-color: #333333;
+	color: pink;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+	position: relative;
+	display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: mistyrose;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+
+
+.zoom {
+	transition: transform .2s; /* Animation */
+	margin: 0 auto;
+}
+
+.zoom:hover {
+	transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+
+.leah {
+	font-style: italic;
+}
+
+
+lang-switch {
+	font-size: 12px;
+}
+
+
+h2 {
+	font-size: 16px;
+	font-family: Gisha;
+}
+
+
+h6 {
+	font-size: 14px;
+	font-family: Gisha;
+}
+
+
+form {
+	font-size: 13px;
+	font-family: "Arial Nova Cond";
+}
+
+h7 {
+	font-size: 20px;
+	font-family: Gisha;
 }
